part3/project/base/frontend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: image-finder
          image: IMAGEFINDER/IMAGE
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/image
          resources:
            limits:
              cpu: "20m"
              memory: "50Mi"
        - name: project-output
          image: PROJECTOUTPUT/IMAGE
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/image
          resources:
            limits:
              cpu: "20m"
              memory: "100Mi"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
