part3/project/base/todo-backend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: TODOBACKEND/IMAGE
          resources:
            limits:
              cpu: "20m"
              memory: "100Mi"
